feat(combinationMultipart): add combination multipart type. (#3658)
* feat(combination-multipart): add combination multipart question

* feat(itemDetail): add combine multipart question item

* feat(combinationMultipart): change question category tab

--- a/packages/localization/src/locales/author/en.json
+++ b/packages/localization/src/locales/author/en.json
@@ -98,7 +98,8 @@
       "itemDetail": "Item Detail",
       "backToItemList": "Back to Item Bank",
       "backText": "Back to Item Detail",
-      "addNew": "ANOTHER PART"
+      "addNew": "ANOTHER PART",
+      "addFirstPart": "FIRST PART"
     },
     "itemdetail": {
       "backText": "Back to Item Detail",
