fix(login page forgot password): reset view to first page, and spelling mistake

--- a/packages/localization/src/locales/login/en.json
+++ b/packages/localization/src/locales/login/en.json
@@ -11,7 +11,7 @@
     "loginidinputlabel": "Username / Email",
     "loginpasswordinputlabel": "Password",
     "remembermetext": "REMEMBER ME",
-    "forgotpasswordtext": "Forgot password?",
+    "forgotpasswordtext": "Forgot Password?",
     "signinbtn": "SIGN IN",
     "copyright": "Edulastic @ 2018 - All rights reserved.",
     "validation": {
