fix(#V-5692): rename container to box in cloze with drag and drop layout

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -62,7 +62,7 @@
       "stemNumerationReviewOnly": "Stem numeration (review only)",
       "stemNumeration": "Stem numeration",
       "fontsize": "Font Size",
-      "responsecontainerglobal": "Response Container (global)",
+      "responsecontainerglobal": "Response Box (global)",
       "widthpx": "Width (px)",
       "heightpx": "Height (px)",
       "lineWidth": "Line width (px)",
@@ -81,7 +81,7 @@
       "number": "number",
       "inputtype": "Input Type",
       "addnewresponsecontainer": "Add New Response Container",
-      "responsecontainerindividual": "Response Container",
+      "responsecontainerindividual": "Response Box",
       "globalSettings": "Global Settings",
       "responsecontainerindividuals": "Response container (individual)",
       "newcurriculum": "New Curriculum",
