--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -685,6 +685,8 @@
       "ignoreOrder": "Ignore order",
       "allowNumericOnly": "Restrict to numeric input",
       "allowedVariables": "Restrict variables used to",
+      "showDropdown": "Show units in",
+      "customizeunits": "Customize Units",
       "allowInterval": "Allow interval",
       "ignoreTrailingZeros": "Ignore trailing zeros in a decimal",
       "ignoreCoefficientOfOne": "Ignore a \"1\" in front of a variable",
