fix(EV-6222) change checkbox to radio group

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -665,6 +665,8 @@
       "correctAnswers": "Correct Answer",
       "alternateAnswers": "Alternate Answer",
       "dot": "Dot",
+      "dropdown": "Dropdown",
+      "keypad": "Keypad",
       "comma": "Comma",
       "space": "Space",
       "decimal": "Decimal",
