ignore case option added for multipart que (#3943)

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -796,7 +796,9 @@
       "composequestion": "Question",
       "enterQuestion": "Enter Question",
       "enterContent": "Enter Question Contents",
-      "content": "Content"
+      "content": "Content",
+      "ignoreCase": "Ignore Case",
+      "mixNmatch": "Mix-n-Match alternative answers"
     }
   }
 }
