fix(EV-6438): fix individual response box style in cloze types (#3873)
* fix(EV-6438): individaul response box style in cloze dropdown types

* fix(EV-6438): individual response box style in cloze image text

* fix(EV-6438) individual response box style in cloze drag and drop

* fix(EV-6438): change text in cloze with text

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -17,6 +17,7 @@
     "hint": "Hint",
     "addANewHint": "Add a new hint",
     "options": {
+      "autoexpandoninput": "AUTO EXPAND ON INPUT",
       "instant_feedback": "Check answer button",
       "check_answer": "Check answer",
       "feedback_attempts": "Check answer attempts",
@@ -58,11 +59,11 @@
       "labelType": "Label type",
       "uppercase": "Uppercase alphabet",
       "lowercase": "Lowercase alphabet",
-      "responsecontainerposition": "Response Container Position",
+      "responsecontainerposition": "Response Box Position",
       "stemNumerationReviewOnly": "Stem numeration (review only)",
       "stemNumeration": "Stem numeration",
       "fontsize": "Font Size",
-      "responsecontainerglobal": "Response Box (global)",
+      "responsecontainerglobal": "Default Response Box",
       "widthpx": "Width (px)",
       "heightpx": "Height (px)",
       "lineWidth": "Line width (px)",
@@ -82,8 +83,8 @@
       "inputtype": "Input Type",
       "addnewresponsecontainer": "Add New Response Container",
       "responsecontainerindividual": "Response Box",
-      "globalSettings": "Global Settings",
-      "responsecontainerindividuals": "Response container (individual)",
+      "globalSettings": "Default Settings",
+      "responsecontainerindividuals": "Individual Response Box",
       "newcurriculum": "New Curriculum",
       "newAligment": "New Aligment",
       "save": "Save",
