fix(EV-6439): add global height and width to math types (#3893)
* fix(EV-6439) WIP

* fix(EV-6439): add global hight and width to math types

* fix(EV-6439): changed global width to min-width

* fix(EV-6439): add min width

* fix(EV-6439): change minWidth to min_width

* fix(EV-6439) added default width in math types

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -63,7 +63,9 @@
       "stemNumerationReviewOnly": "Stem numeration (review only)",
       "stemNumeration": "Stem numeration",
       "fontsize": "Font Size",
-      "responsecontainerglobal": "Default Response Box",
+      "responsecontainerglobal": "Response Box (global)",
+      "responseBox": "Response Box",
+      "responseBoxOverride": "Box Sizes (override)",
       "widthpx": "Width (px)",
       "heightpx": "Height (px)",
       "lineWidth": "Line width (px)",
@@ -90,6 +92,8 @@
       "save": "Save",
       "templateFontScale": "Template font scale",
       "responseMinimumWidth": "Response minimum width (px)",
+      "defaultWidth": "Default Response Box Width (px)",
+      "defaultHeight": "Default Response Box Height (px)",
       "transparentBackground": "Transparent background",
       "responseContainer": "Response container",
       "response": "Response",
