feat(UI): Manage Class page (EV-6308)

--- a/packages/localization/src/locales/manageClass/en.json
+++ b/packages/localization/src/locales/manageClass/en.json
@@ -1,5 +1,6 @@
 {
   "common": {
+    "myClasses": "My Classes",
     "noClassesTitle": "No archived classes",
     "noClassesSubTitle": "You have no archived classes available",
     "noActiveClassesTitle": "No active classes",
