--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -284,6 +284,7 @@
       "paragraph": "Paragraph",
       "sentence": "Sentence",
       "word": "Word",
+      "custom": "Custom",
       "templateTitle": "Template",
       "editTemplateTab": "Edit template",
       "editTokenTab": "Edit token"
