(EV-5206)equisyntax val variable,integer,number,scientific added

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -691,6 +691,10 @@
       "exponent": "Exponent",
       "standardForm": "Standard Form",
       "slopeInterceptForm": "Slope Intercept Form",
+      "integer": "Integer",
+      "scientific": "Scientific",
+      "variable": "Variable",
+      "number": "Number",
       "pointSlopeForm": "Point SlopeForm",
       "method": "Method",
       "field": "Field",
