--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -752,6 +752,8 @@
       "additionalOptions": "Additional Options",
       "setThousandsSeparator": "Set Thousands Separator",
       "setEvaluation": "Interpret Response as Set",
+      "isRationalized": "Check If Rationalized",
+      "setListTypeResponse": "Interpret Response as List",
       "setDecimalSeparator": "Set Decimal Separator"
     },
     "matrix": {
