--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -752,7 +752,7 @@
       "additionalOptions": "Additional Options",
       "setThousandsSeparator": "Set Thousands Separator",
       "setEvaluation": "Interpret Response as Set",
-      "isRationalized": "Check If Rationalized",
+      "isRationalized": "Check if rationalized",
       "setListTypeResponse": "Interpret Response as List",
       "setDecimalSeparator": "Set Decimal Separator"
     },
