--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -715,7 +715,7 @@
       "ignoreCoefficientOfOne": "Ignore a \"1\" in front of a variable",
       "inverseResult": "Inverse result",
       "significantDecimalPlaces": "Significant decimal places",
-      "ignoreText": "Ignore alphabet characters",
+      "ignoreAlphabeticCharacters": "Ignore alphabet characters",
       "compareSides": "Compare both sides of the in/equality",
       "treatEAsEulersNumber": "Interpret 'e' as Euler's number",
       "tolerance": "Allow tolerance",
