Add(EV-6139): My Profile page for Student
- Feature
- It gives student to see their profile and change their password functionality.
- JIRA: https://snapwiz.atlassian.net/browse/EV-6139

--- a/packages/localization/src/locales/profile/en.json
+++ b/packages/localization/src/locales/profile/en.json
@@ -3,8 +3,11 @@
     "title": {
       "firstNameInputLabel": "First Name",
       "lastNameInputLabel": "Last Name",
+      "emailUsernameLabel": "Email/Username",
       "emailInputLabel": "Email",
       "passwordInputLabel": "Password",
+      "newPasswordLabel": "New Password",
+      "confirmPaswswordLabel": "Confirm Password",
       "firstName": "Please input your First name",
       "lastName": "Please input your Last name",
       "email": "Please input your E-mail!",
