--- a/packages/localization/src/locales/login/en.json
+++ b/packages/localization/src/locales/login/en.json
@@ -19,7 +19,7 @@
       "validemail": "The input is not valid Email!",
       "emptypassword": "Please input your password!"
     },
-    "policyvoilation": "Enrollment for your school district is restricted. Please contact your administrator for assistance."
+    "policyviolation": "Enrollment for your school district is restricted. Please contact your administrator for assistance."
   },
   "component": {
     "signup": {
