--- a/packages/localization/src/locales/profile/en.json
+++ b/packages/localization/src/locales/profile/en.json
@@ -1,6 +1,7 @@
 {
   "common": {
     "title": {
+      "userTitleLabel": "Title",
       "firstNameInputLabel": "First Name",
       "lastNameInputLabel": "Last Name",
       "emailUsernameLabel": "Email/Username",
@@ -8,13 +9,16 @@
       "passwordInputLabel": "Password",
       "newPasswordLabel": "New Password",
       "confirmPaswswordLabel": "Confirm Password",
+      "userTitle": "Please select your title",
       "firstName": "Please input your First name",
       "lastName": "Please input your Last name",
       "email": "Please input your E-mail!",
       "validemail": "'The input is not valid E-mail!'",
       "password": "Please input your password!",
       "cancel": "cancel",
-      "save": "save"
+      "save": "save",
+      "editProfile": "Edit Profile",
+      "deleteAccount": "Delete My Account"
     }
   }
 }
