fix(MathTypes): fixes on math type ui issues. (#4305)
* fix(MathType): UI issues in math types

* fix(Mathtypes): correct answer math input style

* fix(MathTypes): correct answer math input font size

* fix(MathType): hide additionals by default

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -109,7 +109,7 @@
       "textBlocks": "Text Blocks",
       "customkeys": "Custom Keys",
       "addTextBlock": "Add new text block",
-      "addResponseContainer": "Add new response container",
+      "addResponseContainer": "Add new response box",
       "additionalOptions": "Additional Options",
       "stimulusReviewOnly": "Stimulus (review only)",
       "instructorStimulus": "Instructor stimulus",
