fix(passage type question edit view): edit view should look like mockup

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -767,7 +767,7 @@
       "mathQuill": "MathQuill",
       "heading": "Heading",
       "contentsTitle": "Title",
-      "contents": "Contents",
+      "contents": "Content",
       "enterPassageContentHere": "Enter passage content here",
       "contentPages": "Content pages",
       "add": "Add",
