fix(EV-7130): changing heading text and size

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -76,7 +76,7 @@
       "fontsize": "Font Size",
       "responsecontainerglobal": "Response Box (global)",
       "responseBox": "Response Box",
-      "responseBoxOverride": "Box Sizes (override)",
+      "responseBoxOverride": "Response Box Sizes (override)",
       "widthpx": "Width (px)",
       "heightpx": "Height (px)",
       "lineWidth": "Line width (px)",
