duplicated responses option added for matchlist que type

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -314,6 +314,7 @@
       "enterQuestion": "Enter question",
       "list": "List",
       "addNew": "Add new",
+      "duplicatedResponses": "Duplicated responses",
       "dragItemsTitle": "Drag & Drop the answer",
       "correctAnswers": "Correct Answers",
       "alternateAnswers": "Alternate Answers"
