Fix(EV-7164): Wrong message if both passwords are not matching. - Bug fix - Wrong validation message if both passwords are not matching in "My profile" page of Student. - JIRA: https://snapwiz.atlassian.net/browse/EV-7164

--- a/packages/localization/src/locales/profile/en.json
+++ b/packages/localization/src/locales/profile/en.json
@@ -18,7 +18,8 @@
       "cancel": "cancel",
       "save": "save",
       "editProfile": "Edit Profile",
-      "deleteAccount": "Delete My Account"
+      "deleteAccount": "Delete My Account",
+      "confirmPasswordMess": "Password didn't match."
     }
   }
 }
