fix(signup): verify district url for district login

--- a/packages/localization/src/locales/login/en.json
+++ b/packages/localization/src/locales/login/en.json
@@ -19,7 +19,8 @@
       "validemail": "The input is not valid Email!",
       "emptypassword": "Please input your password!"
     },
-    "policyviolation": "Enrollment for your school district is restricted. Please contact your administrator for assistance."
+    "policyviolation": "Enrollment for your school district is restricted. Please contact your administrator for assistance.",
+    "forgotpassworderror": "Please provide registered Username or Email."
   },
   "component": {
     "signup": {
