fix(EV-7187): display alternate answers in preview

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -374,7 +374,8 @@
       "inputLabel": "Value",
       "exactMatch": "Exact Match",
       "anyTextContaining": "Any text containing",
-      "correctAnswers": "Correct Answers"
+      "correctAnswers": "Correct Answers",
+      "alternateAnswers": "Alternate Answer"
     },
     "orderlist": {
       "composequestion": "Question",
