--- a/packages/localization/src/locales/profile/en.json
+++ b/packages/localization/src/locales/profile/en.json
@@ -19,7 +19,9 @@
       "save": "save",
       "editProfile": "Edit Profile",
       "deleteAccount": "Delete My Account",
-      "confirmPasswordMess": "Password didn't match."
+      "confirmPasswordMess": "Password didn't match.",
+      "passwordLengthErrorMessage": "Password is too short - must be at least 4 characters.",
+      "confirmPasswordLengthErrorMessage": "Please enter at least 4 characters."
     }
   }
 }
