fix(mathTypes): user is able to input correct answer in mathypes (#4583)
- matrices types.
-complate equation

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -744,6 +744,7 @@
       "isSimplified": "Check if expression is simplified",
       "isFactorised": "Check if expression is factored",
       "isExpanded": "Check if expression is expanded",
+      "isTrue": "Check if true",
       "stringMatch": "Plain Text",
       "equivSyntax": "Equivalent Syntax",
       "isDecimal": "Check if number is a decimal",
