--- a/packages/localization/src/locales/profile/en.json
+++ b/packages/localization/src/locales/profile/en.json
@@ -22,6 +22,7 @@
       "confirmPasswordMess": "Password didn't match.",
       "passwordLengthErrorMessage": "Password is too short - must be at least 4 characters.",
       "confirmPasswordLengthErrorMessage": "Please enter at least 4 characters.",
+      "instructor": "Instructor Information",
       "emailAlreadyExistsMessage": "Email/Username already exists.",
       "invalidEmailMessage": "Please provide valid Username or Email id",
       "emailLengthMessage": "Must less than 256 characters!"
