fix(EV-7764): added hints label

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -207,7 +207,8 @@
       "explanation": "Explanation",
       "display": "Display",
       "enterDistractorRationaleQuestion": "Enter distractor rationale for the question",
-      "enterSampleAnswer": "Enter sample answer"
+      "enterSampleAnswer": "Enter sample answer",
+      "hints": "Hints"
     },
     "dropZone": {
       "dragDrop": "Drag & Drop",
