--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -255,6 +255,7 @@
       "xAxisLabel": "X Axis Label",
       "yAxisLabel": "Y Axis Label",
       "interactive": "Interactive",
+      "showLabelOnlyByHover": "Show label only by hover",
       "addPoint": "Add Point",
       "point": "Point",
       "points": "Points",
