--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -19,7 +19,7 @@
     },
     "question": {
       "composeQuestion": "Question",
-      "questionPlaceholder": "Enter the question stem here"
+      "questionPlaceholder": "Enter your question"
     }
   },
   "component": {
@@ -224,14 +224,14 @@
       "lineColorLabel": "Line color",
       "addButtonText": "Add new color",
       "composeQuestion": "Question",
-      "enterQuestion": "Enter question",
+      "enterQuestion": "Enter your question",
       "undo": "Undo",
       "redo": "Redo",
       "clear": "Clear"
     },
     "shading": {
       "composeQuestion": "Question",
-      "enterQuestion": "Enter question",
+      "enterQuestion": "Enter your question",
       "canvasSubtitle": "Canvas option",
       "rowsCountSubtitle": "Row count",
       "colsCountSubtitle": "Column count",
@@ -245,7 +245,7 @@
     },
     "chart": {
       "composeQuestion": "Question",
-      "enterQuestion": "Enter question",
+      "enterQuestion": "Enter your question",
       "chartMainBlockTitle": "Chart",
       "width": "Width (px)",
       "height": "Height (px)",
@@ -291,11 +291,11 @@
       "multipleResponses": "Multiple responses",
       "areaSelectLabel": "Select Area",
       "composeQuestion": "Question",
-      "enterQuestion": "Enter question"
+      "enterQuestion": "Enter your question"
     },
     "tokenHighlight": {
       "composeQuestion": "Question",
-      "enterQuestion": "Enter question",
+      "enterQuestion": "Enter your question",
       "paragraph": "Paragraph",
       "sentence": "Sentence",
       "word": "Word",
@@ -313,7 +313,7 @@
       "possibleRespTitle": "Possible responses",
       "addNewGroup": "ADD NEW GROUP",
       "composeQuestion": "Question",
-      "enterQuestion": "Enter question",
+      "enterQuestion": "Enter your question",
       "list": "List",
       "addNew": "Add new",
       "duplicatedResponses": "Duplicated responses",
@@ -326,7 +326,7 @@
       "alternateAnswer": "Alternate Answer",
       "deleteBackImage": "Delete Background Image",
       "composeQuestion": "Question",
-      "enterQuestion": "Enter question",
+      "enterQuestion": "Enter your question",
       "dragItemsTitle": "Drag & Drop the answer",
       "correctAnswers": "Correct Answers",
       "editColListSubtitle": "Column titles",
@@ -356,7 +356,7 @@
       "cut": "Cut",
       "submitOverLimit": "Submit over limit",
       "composequestion": "Question",
-      "enterQuestion": "Enter question",
+      "enterQuestion": "Enter your question",
       "plain": {
         "templateText": "The United States of America, is a federal republic composed of 50 states, a federal district, five major territories and various possessions.",
         "formattingOptions": "Action formatting options"
@@ -368,7 +368,7 @@
     },
     "shortText": {
       "composeQuestion": "Question",
-      "enterQuestion": "Enter question",
+      "enterQuestion": "Enter your question",
       "smallSizeTitle": "How many states are there in America?",
       "smallSizePar": "Write your answer in the text field below.",
       "selectLabel": "Allow",
@@ -382,7 +382,7 @@
       "composequestion": "Question",
       "enteryourquestion": "Enter your question",
       "addnewchoicebtn": "Add New Choice",
-      " ": "[This is the stem.]",
+      " ": "Enter your question",
       "correctanswer": "Correct Answer:",
       "alternateAnswer": "Alternate Answer",
       "composeQuestion": "Question",
@@ -395,15 +395,15 @@
       "alternateAnswer": "Alternate Answer",
       "list": "List",
       "composeQuestion": "Question",
-      "enterQuestion": "Enter question"
+      "enterQuestion": "Enter your question"
     },
     "multiplechoice": {
-      "thisisstem": "[This is the stem.]",
+      "thisisstem": "Enter your question",
       "setcorrectanswers": "Set Correct Answer(s)",
       "addnewchoice": "Add New Choice",
       "multiplechoiceoptions": "Multiple Choice Options",
       "composequestion": "Question",
-      "questionPlaceholder": "Enter the question stem here",
+      "questionPlaceholder": "Enter your question",
       "optionPlaceholder": "Option",
       "multipleResponses": "Multiple Responses",
       "shuffleOptions": "Shuffle options",
@@ -415,7 +415,7 @@
       "moveBackgroundImage": "Move Background Image",
       "dragDrop": {
         "templatemarkup": "Template Markup",
-        "thisisstem": "[This is the stem.]",
+        "thisisstem": "Enter your question",
         "setcorrectanswers": "Set Correct Answer(s)",
         "addnewchoice": "Add New Choice",
         "multiplechoiceoptions": "Multiple Choice Options",
@@ -433,7 +433,7 @@
       },
       "text": {
         "templatemarkup": "Template Markup",
-        "thisisstem": "[This is the stem.]",
+        "thisisstem": "Enter your question",
         "setcorrectanswers": "Set Correct Answer(s)",
         "composequestion": "Question",
         "templatemarkupplaceholder": "[This is the template markup]"
@@ -441,7 +441,7 @@
       "imageDragDrop": {
         "composequestion": "Question",
         "response": "Response",
-        "thisisstem": "[This is the stem.]",
+        "thisisstem": "Enter your question",
         "addimage": "Add image",
         "imagepreview": "Image preview",
         "imagealtertext": "Image alternative text",
@@ -483,7 +483,7 @@
       "imageDropDown": {
         "composequestion": "Question",
         "response": "Response",
-        "thisisstem": "[This is the stem.]",
+        "thisisstem": "Enter your question",
         "addimage": "Add image",
         "imagepreview": "Image preview",
         "imagealtertext": "Image alternative text",
@@ -525,7 +525,7 @@
         "response": "Response",
         "deleteImageButtonText": "Delete Image",
         "updateImageButtonText": "Update Image",
-        "thisisstem": "[This is the stem.]",
+        "thisisstem": "Enter your question",
         "widthpx": "Width (px)",
         "heightpx": "Height (px)",
         "positionX": "Left (px)",
@@ -556,7 +556,7 @@
       },
       "dropDown": {
         "templatemarkup": "Template Markup",
-        "thisisstem": "[This is the stem.]",
+        "thisisstem": "Enter your question",
         "ignorecase": "Ignore Case",
         "allowsinglelettermistake": "Allow single letter mistake",
         "setcorrectanswers": "Set Correct Answer(s)",
@@ -674,7 +674,7 @@
       "shuffleAnswerChoices": "Shuffle Answer Choices"
     },
     "math": {
-      "enterQuestion": "Enter question",
+      "enterQuestion": "Enter your question",
       "bold": "Bold",
       "italic": "Italic",
       "underline": "Underline",
@@ -767,7 +767,7 @@
     "matrix": {
       "matrixStyle": "Matrix style",
       "multipleResponses": "Multiple responses",
-      "enterQuestion": "Enter question",
+      "enterQuestion": "Enter your question",
       "multipleChoiceOptions": "Multiple Choice Options",
       "steams": "Steams"
     },
@@ -823,8 +823,8 @@
     },
     "multipart": {
       "composequestion": "Question",
-      "enterQuestion": "Enter Question",
-      "enterContent": "Enter Question Contents",
+      "enterQuestion": "Enter your question",
+      "enterContent": "Enter your question",
       "content": "Content",
       "ignoreCase": "Ignore Case",
       "mixNmatch": "Mix-n-Match alternative answers",
