fix(Charts): labelVisibility settings fixes

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -272,6 +272,11 @@
         "x_only": "Display X axes gridlines only (Vertical)",
         "y_only": "Display Y axes gridlines only (Horizontal)",
         "none": "Don't display gridlines"
+      },
+      "labelOptions": {
+        "showAlways": "Show always",
+        "hidden": "Hidden",
+        "showByHover": "Show by hover"
       }
     },
     "hotspot": {
