style(side menu):updates to my profile menu as per new mockup (#5117)

--- a/packages/localization/src/locales/sidemenu/en.json
+++ b/packages/localization/src/locales/sidemenu/en.json
@@ -7,7 +7,7 @@
     "report": "Reporte",
     "userRoleStudent": "student",
     "helpButtonText": "Help Center",
-    "signOutText": "SIGN OUT",
-    "myProfileText": "MY PROFILE"
+    "signOutText": "Sign Out",
+    "myProfileText": "My Profile"
   }
 }
