fix(EV-8130): add fractoin format setting for DotPot and LinePlot charts (#5119)
* WIE-365 EV-8130
Add setting fraction format for all points

* fix(Charts): fix fraction format setting

* fix(Charts): fix calculating number with fraction format

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -276,6 +276,11 @@
         "showAlways": "Show always",
         "hidden": "Hidden",
         "showByHover": "Show by hover"
+      },
+      "fractionFormatOptions": {
+        "decimal": "Decimal",
+        "fraction": "Fraction",
+        "mixedFraction": "Mixed Fraction"
       }
     },
     "hotspot": {
