--- a/packages/localization/src/locales/profile/en.json
+++ b/packages/localization/src/locales/profile/en.json
@@ -23,6 +23,7 @@
       "passwordLengthErrorMessage": "Password is too short - must be at least 4 characters.",
       "confirmPasswordLengthErrorMessage": "Please enter at least 4 characters.",
       "instructor": "Instructor Information",
+      "student": "Student Information",
       "emailAlreadyExistsMessage": "Email/Username already exists.",
       "invalidEmailMessage": "Please provide valid Username or Email id",
       "emailLengthMessage": "Must less than 256 characters!"
