feat(EV-7722): Text type resource added (#5391)
* feat(EV-7722): Text type resource added

* feat(EV-7722): Text type resource added

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -835,6 +835,15 @@
       "uploadSuccess": " has been uploaded successfully",
       "settings": "Settings"
     },
+    "text": {
+      "heading": "Heading (Optional)",
+      "content": "Content",
+      "video": "Video",
+      "stimulus": "Enter your text resource",
+      "text": "Text",
+      "uploadSuccess": " has been uploaded successfully",
+      "settings": "Settings"
+    },
     "protractor": {
       "details": "Details",
       "imageAlternativeText": "Image alternative text",
