fix(teacher item preview mode/practice player): hints should be visib… (#5365)
* fix(teacher item preview mode/practice player): hints should be visible to teacher preivewmode and practice player

* fix(hints): practice player hints

--- a/packages/localization/src/locales/common/en.json
+++ b/packages/localization/src/locales/common/en.json
@@ -12,7 +12,8 @@
     "submit": "Submit",
     "next": "Next",
     "quit": "Quit",
-    "checkanswer": "Check answer"
+    "checkanswer": "Check answer",
+    "hints": "Hints"
   },
   "exitConfirmation": {
     "title": "Are you sure?",
