fix(ev-8577,8585): Question menu collapse in student attempt test page is not as pe… (#5405)
* fix: Question menu collapse in student attempt test page is not as per mockup

* fix review comments

--- a/packages/localization/src/locales/student/en.json
+++ b/packages/localization/src/locales/student/en.json
@@ -37,6 +37,7 @@
     "layout": {
       "nextbtn": "next",
       "questionlist": {
+        "heading": "Questions",
         "question": "question"
       },
       "selectbox": {
