feat(clozeImageDragDrop): allowing to customise resp container width (#5490)
* feat(clozeImageDragDrop): allowing to customise resp container width

* fix(labelImageDragDrop): not allowing to set less than 1

* feat(clozeDragDrop): allowing to customise container width

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -70,7 +70,8 @@
       "labelType": "Label type",
       "uppercase": "Uppercase alphabet",
       "lowercase": "Lowercase alphabet",
-      "responsecontainerposition": "Response Box Position",
+      "responsecontainerposition": "Response Container Position",
+      "responseContainerWidth": "Response Container Width (px)",
       "stemNumerationReviewOnly": "Stem numeration (review only)",
       "stemNumeration": "Stem numeration",
       "fontsize": "Font Size",
