feat(EV-7962): added new question type called Number line Plot (#5511)
* fix(EV-8374): show vertical numberline when orientation is vertical

* fix(EV-8374): user is able to use segment in vertical mode

* fix(EV-8374): user is able to use vector segment in vertical mode

* fix(EV-8363): user is only put dot at axis in dot answer

* fiX(EV-8363): user is only able to put segment at axis

* fix(EV-8363) fixed page crash on swiching orientation

* fix(EV-8363) user is only able to put vector at axis

* feat(EV-7962): added new question

* feat(EV-7962): update graph control section

* feat(EV-7962): display settings

* feat(ev-7962): draw dot plot

* feat(EV-7962): delete correct answer

* fix(chart preview): fix js syntax error in chart preview

* fix(EV-7962) remove duplicated point on clicking board

* fix(EV7962): add a condition to remove duplcate point

* fix(EV-7962): fix evaluation in number line plot

* fix(EV-7962): revert un-expected changes

* fix(EV-7962): change file names and contants

* fix(EV-7962): add ponit face to question JSON

* feat(ev-7962): dot plot numberline question added

* fix(EV-7962): remove unnecessary compose

* fix(EV-7962): remove unnecessary compose

* fix(EV-7962): remove unnecessary cloneDeep

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -600,6 +600,7 @@
       },
       "title": "Title",
       "graphline": "Line",
+      "lineplotchart": "Chart",
       "possibleresponses": "Possible responses",
       "graphparameters": "Graph parameters",
       "tools": "Tools",
@@ -637,7 +638,11 @@
         "showMaxArrow": "Show max arrow",
         "stackResponses": "Stack responses",
         "spacingBtwStacked": "Spacing between stacked responses (px)",
-        "minWidth": "Minimum width"
+        "minWidth": "Minimum width",
+        "showGrid": "Show Grid",
+        "displayposition": "Display Position On Hover",
+        "drawLabelZero": "Draw Label Zero",
+        "snapToGrid": "Snap To Grid"
       },
       "ticksoptionstitle": "Ticks",
       "ticksoptions": {
