--- a/packages/localization/src/locales/header/en.json
+++ b/packages/localization/src/locales/header/en.json
@@ -7,6 +7,6 @@
     "reportsTitle": "Reports",
     "skillReportTitle": "Skill Report",
     "assignmentsTitle": "Assignments",
-    "profileTitle": "Profile"
+    "profileTitle": "My Profile"
   }
 }
