fix : ui issues in manageclass and login/signup page (#5711)
* fix: remember me text font size as per mockup

* fix:student signup page issues

* fix: login/signup page icons

* fix: added tooltip

* fix: for profile pic more than 2MB ,file upload fails but spin compoenent continue showing

* fix: google class sync modal ui change

--- a/packages/localization/src/locales/login/en.json
+++ b/packages/localization/src/locales/login/en.json
@@ -1,6 +1,6 @@
 {
   "common": {
-    "edulastictext": "Edulastic",
+    "edulastictext": "Edulastic ",
     "donthaveanaccount": "Don't have an account yet? ",
     "signupbtn": "SIGN UP",
     "loginboxheading": "Login",
@@ -10,7 +10,7 @@
     "formboxheading": "Or you can always...",
     "loginidinputlabel": "Username / Email",
     "loginpasswordinputlabel": "Password",
-    "remembermetext": "REMEMBER ME",
+    "remembermetext": "Remember me",
     "forgotpasswordtext": "Forgot Password?",
     "signinbtn": "SIGN IN",
     "copyright": "Edulastic @ 2018 - All rights reserved.",
