fix(EV-7037): update line plot migration to new numberline plot question type (#5805)
* fix(NumberlinePlot): fix numberline plot tick distance setting for migration

* fix(NumberlinePlot): fix numberline plot answers saving

* fix(NumberlinePlot): fix points count setting

* fix(NumberlinePlot): hide graph edit tools on preview tab

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -664,7 +664,9 @@
         "tickdistance": "Tick distance",
         "snaptoticks": "Snap to ticks",
         "renderingbase": "Rendering base",
-        "minorTicks": "Minor ticks"
+        "minorTicks": "Minor ticks",
+        "minimum": "Minimum",
+        "maximum": "Maximum"
       },
       "labelstitle": "Labels",
       "labelsoptions": {
