fix(EV-9304): label update (#5859)

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -824,7 +824,7 @@
       "multipleResponses": "Multiple responses",
       "enterQuestion": "Enter your question",
       "multipleChoiceOptions": "Multiple Choice Options",
-      "steams": "Steams"
+      "stems": "Stems"
     },
     "passage": {
       "mathJax": "MathJax (response inputs renderer with MathQuill)",
