fix(clozeDragDrop): making preview ui as per mock up (#5852)

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -456,7 +456,8 @@
         "shuffleoptions": "Shuffle Options",
         "addgroup": "Add Group",
         "newChoice": "New Choice",
-        "title": "Title"
+        "title": "Title",
+        "optionContainerHeading": "DRAG & DROP THE ANSWER"
       },
       "text": {
         "templatemarkup": "Template Markup",
