style(student manage class): alignment as per mockup (1366)

--- a/packages/localization/src/locales/manageClass/en.json
+++ b/packages/localization/src/locales/manageClass/en.json
@@ -9,7 +9,7 @@
     "archive": "ARCHIVE",
     "visitClass": "VISIT CLASS",
     "instructor": "Instructor",
-    "grades": "Grades",
+    "grade": "Grade",
     "subject": "Subject",
     "standard": "Standard",
     "startDate": "Start Date",
