feat(ev-5104) : student join class using classcode  (#5937)
* feat : added feature to enroll student with class code from student login

* fix: font sizes in request school form

* feat : join class using classcode as student

--- a/packages/localization/src/locales/manageClass/en.json
+++ b/packages/localization/src/locales/manageClass/en.json
@@ -13,6 +13,10 @@
     "subject": "Subject",
     "standard": "Standard",
     "startDate": "Start Date",
-    "endDate": "End Date"
+    "endDate": "End Date",
+    "joinClass": "Join Class",
+    "join": "Join",
+    "enterClassCode": "Enter Class Code",
+    "cancel": "Cancel"
   }
 }
