--- a/packages/localization/src/locales/login/en.json
+++ b/packages/localization/src/locales/login/en.json
@@ -55,7 +55,7 @@
         "collaboratetext": "Collaborate with your colleagues and more",
         "searchschool": "Search school by Zip, name or City",
         "requestnewschool": "Request a new School",
-        "infotext": "Please fill the details to add a new school, Edualstic Support will create the school after verifying the data",
+        "infotext": "Please fill the details to add a new school. Edulastic Support will create the school after verifying the data.",
         "choosesubject": "Choose your subject",
         "choosegrade": "and grade",
         "gsinfotext": "So you can get relevant content"
