fix(FractionEditor): add translate

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -894,6 +894,9 @@
       "ignoreCase": "Ignore Case",
       "mixNmatch": "Mix-n-Match alternative answers",
       "allowsinglelettermistake": "Allow single letter mistake"
+    },
+    "fractionEditor": {
+      "showAnnotations": "Show Annotations"
     }
   }
 }
